--- a/AsterixRecorder.ui
+++ b/AsterixRecorder.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>400</height>
+    <height>594</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -25,7 +25,7 @@
   <property name="maximumSize">
    <size>
     <width>650</width>
-    <height>400</height>
+    <height>800</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -38,7 +38,7 @@
       <x>0</x>
       <y>0</y>
       <width>650</width>
-      <height>401</height>
+      <height>171</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -48,7 +48,7 @@
      </sizepolicy>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -64,7 +64,7 @@
        </rect>
       </property>
      </widget>
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="LblRecFileName">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -90,7 +90,7 @@
        <string>Select file</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_2">
+     <widget class="QLabel" name="LblRecPort">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -120,19 +120,6 @@
       </property>
       <property name="maxLength">
        <number>5</number>
-      </property>
-     </widget>
-     <widget class="QPlainTextEdit" name="plainTextEdit">
-      <property name="geometry">
-       <rect>
-        <x>2</x>
-        <y>100</y>
-        <width>641</width>
-        <height>271</height>
-       </rect>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
       </property>
      </widget>
      <widget class="QPushButton" name="BtnListen">
@@ -166,7 +153,82 @@
      <attribute name="title">
       <string>Playback</string>
      </attribute>
+     <widget class="QLabel" name="LblInputFileName">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>File name:</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="BtnSelInputFile">
+      <property name="geometry">
+       <rect>
+        <x>540</x>
+        <y>10</y>
+        <width>101</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Select file</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="EdInputFileName">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>10</y>
+        <width>461</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="BtnRecord_2">
+      <property name="geometry">
+       <rect>
+        <x>540</x>
+        <y>70</y>
+        <width>101</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Start recording</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="BtnReadInputFile">
+      <property name="geometry">
+       <rect>
+        <x>540</x>
+        <y>40</y>
+        <width>101</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Read input file</string>
+      </property>
+     </widget>
     </widget>
+   </widget>
+   <widget class="QPlainTextEdit" name="StatusTerminal">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>175</y>
+      <width>641</width>
+      <height>415</height>
+     </rect>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
   </widget>
  </widget>
